--- a/package.json
+++ b/package.json
@@ -1,22 +1,48 @@
 {
   "name": "pfslive",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "prebuild": "expo prebuild --clean",
+    "clean": "rm -rf node_modules android ios .expo && rm -f package-lock.json"
   },
   "dependencies": {
-    "expo": "~54.0.33",
-    "expo-status-bar": "~3.0.9",
+    "@expo/vector-icons": "^15.0.3",
+    "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.12.0",
+    "@rnmapbox/maps": "^10.2.10",
+    "@turf/turf": "^6.5.0",
+    "axios": "^1.13.5",
+    "expo": "~54.0.0",
+    "expo-asset": "~12.0.12",
+    "expo-dev-client": "~6.0.0",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-status-bar": "~3.0.0",
+    "fast-xml-parser": "^4.3.6",
+    "i18next": "^25.8.5",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-i18next": "^16.5.4",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "victory-native": "^37.3.2",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@types/geojson": "^7946.0.14",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "babel-preset-expo": "~54.0.10",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
