--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-dev-client": "~6.0.0",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
+    "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.0",
     "fast-xml-parser": "^4.3.6",
     "i18next": "^25.8.5",
