--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf node_modules android ios .expo && rm -f package-lock.json"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -18,12 +19,15 @@
     "@rnmapbox/maps": "^10.2.10",
     "@turf/turf": "^6.5.0",
     "axios": "^1.13.5",
+    "crypto-js": "^4.2.0",
     "expo": "~54.0.0",
     "expo-asset": "~12.0.12",
     "expo-dev-client": "~6.0.0",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
     "expo-location": "~19.0.8",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.0",
     "fast-xml-parser": "^4.3.6",
     "i18next": "^25.8.5",
@@ -35,6 +39,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-toast-message": "^2.3.3",
     "victory-native": "^37.3.2",
     "zustand": "^5.0.11"
   },
