--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
@@ -27,6 +28,7 @@
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.11",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-localization": "~17.0.8",
     "expo-location": "~19.0.8",
